<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>CalibJ</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="f1tenth@todo.todo">f1tenth</maintainer>
  <license>TODO: License declaration</license>

  <!-- 빌드 및 실행 의존성 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>opencv-python</exec_depend> 
  <exec_depend>scikit-learn</exec_depend> 

  <!-- 테스트 의존성 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
